# bot-spending-project

./: .gitignore  Dockerfile  Makefile  db.py  pyproject.toml  requirements.txt
bot_body/: bot_logic.py  consts.py  curses.py  start.py  transmission.py  weather_cast.py
